fix(select): label overflows correctl

--- a/core/src/components/select/select.scss
+++ b/core/src/components/select/select.scss
@@ -157,26 +157,53 @@ button {
 
 .label-text-wrapper {
   /**
+   * This causes the label to take up
+   * the entire height of its container
+   * while still keeping the text centered.
+   */
+  display: flex;
+
+  align-items: center;
+
+  /**
+   * Label text should not extend
+   * beyond the bounds of the select.
+   * However, we do not set the max
+   * width to 100% because then
+   * only the label would show and users
+   * would not be able to see what they are typing.
+   */
+  max-width: 200px;
+
+  transition: color 150ms cubic-bezier(.4, 0, .2, 1), transform 150ms cubic-bezier(.4, 0, .2, 1);
+
+  /**
    * This ensures that double tapping this text
    * clicks the <label> and focuses the input
    * when a screen reader is enabled.
    */
   pointer-events: none;
+}
 
+/**
+ * We need to use two elements instead of
+ * one. The .label-text-wrapper is responsible
+ * for centering the label text vertically regardless
+ * of the input height using flexbox.
+ *
+ * The .label-text element is responsible for controlling
+ * overflow when label-placement="fixed".
+ * We want the ellipses to show up when the
+ * fixed label overflows, but text-overflow: ellipsis only
+ * works on block-level elements. A flex item is
+ * considered blockified (https://www.w3.org/TR/css-display-3/#blockify).
+ */
+.label-text {
   text-overflow: ellipsis;
 
   white-space: nowrap;
 
   overflow: hidden;
-}
-
-/**
- * If no label text is placed into the slot
- * then the element should be hidden otherwise
- * there will be additional margins added.
- */
-.label-text-wrapper-hidden {
-  display: none;
 }
 
 // Select Native Wrapper
